# 2A2020600060-HoSyMinhHa-day12

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
app/: auth.py  config.py  cost_guard.py  main.py  rate_limiter.py
app/agent/: agent.py
app/core/: gemini_provider.py  local_provider.py  mock_provider.py  openai_provider.py
app/telemetry/: logger.py  metrics.py
app/tools/: tools.py  websearch.py
tests/: test_main.py
